test/kubernetes/e2e/features/upgrade/testdata/route-with-service.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example.com"
    - "example.org"
  rules:
    - backendRefs:
        - name: example-svc
          port: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  name: hey
---
apiVersion: v1
kind: Pod
metadata:
  name: hey
  namespace: hey
  labels:
    app: hey
    version: v1
    app.kubernetes.io/name: hey
spec:
  containers:
    - name: hey
      image: ricoli/hey
      imagePullPolicy: IfNotPresent
      command:
        - "tail"
        - "-f"
        - "/dev/null"
      resources:
        requests:
          cpu: "100m"
        limits:
          cpu: "200m"
